printElements